# recommend-service

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yaml  image.yaml
infra/: .terraform.lock.hcl  main.tf  terraform.tfstate  variables.tf
proto/recommend-module/recommend_api/v1/: recommend_api.proto
src/domains/recommend/adapter/input/: grpc_recommend.py
src/domains/recommend/adapter/output/: onnx_infer.py  torch_infer.py
src/domains/recommend/domain/: models.py
src/domains/recommend/port/input/: recommend.py
src/domains/recommend/port/output/: infer.py
src/domains/recommend/service/: recommend.py
src/entrypoint/: auth.py  config.py  logging.py
src/entrypoint/grpc_server/: __main__.py  container.py
src/entrypoint/model_convert/: __main__.py
src/entrypoint/test_client/: __main__.py
src/grpc_proto/recommend_api/v1/: recommend_api_pb2.py  recommend_api_pb2.pyi  recommend_api_pb2_grpc.py
test/: conftest.py
test/recommend/adapter/output/: test_onnx_infer.py  test_torch_infer.py
test/unit/recommend/adapter/output/: conftest.py  test_onnx_infer.py  test_torch_infer.py
weights/: 10_model.onnx  5_model.onnx  model.onnx
